<resources>
    <string name="app_name">Montel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_list">List</string>
    <string name="menu_setting">Setting</string>


    <string name="api_key">AIzaSyCGZrXESD0GOa763kqlxkAnPgov8YHHu60</string>
    <string name="title_activity_input_data">InputData</string>

    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Lat Long</string>
    <string name="no_address_found">Address Not Found</string>
    <string name="no_location_data_provided">No Location Data Provided</string>


    <string name="et_name">Nama</string>
    <string name="et_address">Alamat</string>
    <string name="et_location">Koordinat</string>
    <string name="et_violation">Pelanggaran</string>
    <string name="et_idpel">IDPEL</string>
    <string name="et_nometer">No Meter</string>
    <string name="et_noreport">No Berita Acara</string>
    <string name="et_phone">No Telepon</string>
    <string name="et_rates">Tarif</string>
    <string name="et_type">Golongan</string>
    <string name="et_powerType">Golongan</string>


    //Button
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add">Add</string>
    <string name="title_activity_detail">DetailActivity</string>

    //Text
    <string name="textPopup"> Please select bellow : </string>


    //Rates


    //PowerType Spinner
    <string-array name="type_category_rates">
        <item>S - SOSIAL</item>
        <item>R - RUMAH TANGGA</item>
        <item>B - BISNIS</item>
        <item>I - INDUSTRI</item>
        <item>P - PEMERINTAHAN</item>
    </string-array>

    <string-array name="type_subcategory_rates_sosial">
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>

    <string-array name="type_subcategory_rates_rumahtangga">
        <item>R1</item>
        <item>R2</item>
        <item>R3</item>
    </string-array>

    <string-array name="type_subcategory_rates_bisnis">
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
    </string-array>

    <string-array name="type_subcategory_rates_industri">
        <item>I1</item>
        <item>I2</item>
        <item>I3</item>
        <item>I4</item>
    </string-array>

    <string-array name="type_subcategory_rates_pemerintahan">
        <item>P1</item>
        <item>P2</item>
        <item>P3</item>
    </string-array>

    <string-array name="filter">
        <item>All</item>
        <item>Prabayar</item>
        <item>Pascabayar</item>
        <item>Non IDPEL</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="legal">Legal Notices</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="rc">RaceCource</string>
    <string name="race_course">Race Course Road</string>
    <string name="majestic">Majestic</string>
    <string name="majestic_snippet">Bangalore</string>
    <string name="chickpet">ChickPet</string>
    <string name="chickpet_street">Way to Chickpet Street</string>
    <string name="bangalore_railway_station">Bangalore Railway Station</string>

    <string name="icon">CommonsWare logo</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps2">Map</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="OneSignalID">929249b6-6201-4817-9c62-548d4954abc0</string>


    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>




    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <!-- Button -->
    <string name="Button_DeleteGeofence">DELETE</string>

    <!-- Labels -->
    <string name="Label_Name">Name</string>
    <string name="Label_Latitude">Latitude</string>
    <string name="Label_Longitude">Longitude</string>
    <string name="Label_Radius">Radius</string>
    <string name="Label_AddGeofence">Add a Geofence</string>
    <string name="Label_EmptyState">You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string>

    <!-- Hints -->
    <string name="Hint_Name">Name for the geofence</string>
    <string name="Hint_Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="Hint_Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="Hint_adius" formatted="false">Radius (%3.2f to %3.1f km)</string>

    <!-- Units -->
    <string name="Units_Degrees">\u00B0</string>
    <string name="Units_Kilometers">km</string>

    <!-- Notification -->
    <string name="Notification_Title">Are we there yet?</string>
    <string name="Notification_Text">We\'re at %1$s!!!</string>

    <!-- Toast -->
    <string name="Toast_Validation">Please enter valid data for all fields</string>
    <string name="Toast_Error">There was an error. Please try again.</string>


    //
    <string name="com.crashlytics.useFirebaseAppId">true</string>


</resources>
