<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#D3D3D3"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.inputdata.InputData"
    tools:showIn="@layout/activity_input_data">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <!--        Data Diri -->
        <androidx.cardview.widget.CardView
            android:background="@color/colorWWhite"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!--            No Meter / IDPEL-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilIDPEL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/et_idpel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_idpel"
                    android:inputType="number"
                    android:maxLength="15"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNoMeter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/et_nometer">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_nometer"
                    android:inputType="number"
                    android:maxLength="15"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilGolongan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:hint="Golongan">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/acTVGolongan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDaya"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:hint="Daya">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/acTVDaya"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_name"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_address"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_location">



                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_location"
                        android:inputType="text"
                        android:layout_height="wrap_content"/>


                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_phone"
                    android:inputType="number"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>






        <!--        Data Pelanggaran -->
        <androidx.cardview.widget.CardView
            android:background="@color/colorWWhite"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_margin="@dimen/font_10"
                android:text="Pelanggaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View style="@style/Divider"
                android:layout_marginRight="@dimen/font_10"
                android:layout_marginLeft="@dimen/font_10"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_noreport">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_noreport"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilJenisPelanggaran"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Jenis Pelanggaran">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/acTVPelanggaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_violation">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_punishment"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Petugas">



                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_petugas"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unit Pelayanan">



                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_unit_pelayanan"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        </androidx.cardview.widget.CardView>






        <HorizontalScrollView
           android:layout_margin="@dimen/font_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_margin="5dp"
                    android:layout_width="150dp"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ProgressBar
                            android:visibility="gone"
                            android:id="@+id/pb_holder_1"
                            android:layout_gravity="center_vertical|center"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                        <ImageView

                            android:layout_centerInParent="true"
                            android:id="@+id/ivHolder1"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/imageholder" />

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_margin="5dp"
                    android:layout_width="150dp"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ProgressBar
                            android:id="@+id/pb_holder_2"
                            android:visibility="gone"
                            android:layout_gravity="center_vertical|center"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                        <ImageView
                            android:layout_centerInParent="true"
                            android:id="@+id/ivHolder2"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/imageholder" />


                    </FrameLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_margin="5dp"
                    android:layout_width="150dp"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ProgressBar
                            android:visibility="gone"
                            android:id="@+id/pb_holder_3"
                            android:layout_gravity="center_vertical|center"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                        <ImageView
                            android:layout_centerInParent="true"
                            android:id="@+id/ivHolder3"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/imageholder" />

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>




<!--        <Button-->
<!--            android:text="@string/btn_save"-->
<!--            android:id="@+id/btnSave"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->


    </LinearLayout>

</LinearLayout>

